Fixed: content overlapping with header

--- a/styles/content/ContentDetailed.module.scss
+++ b/styles/content/ContentDetailed.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
-  padding: 15vh 10vw;
+  padding: max(5rem, 15vh) 10vw;
   justify-content: center;
   align-self: center;
 
